Added astbuildprog.conf to the files to clean
BuildProgram's configuration file is not a source file, its a built file
(since we need to possibly add header and library directories to it during
the build). However, no `CLEANFILES' variable was defined in
`bin/buildprog/Makefile.am'. As a result, it wouldn't get cleaned. This
variable has now been added so the configuration file will be cleaned from
now on.

This problem was reported by Johannes Zabl.

--- a/bin/buildprog/Makefile.am
+++ b/bin/buildprog/Makefile.am
@@ -47,7 +47,8 @@ EXTRA_DIST = main.h authors-cite.h args.h ui.h buildprog.h astbuildprog.conf.in
 # CPPFLAGS and LDFLAGS that the user might have given at configure time
 # (stored in `IN_CPPFLAGS' and `IN_LDFLAGS' Makefile
 # variables). BuildProgram also needs to know these directories in order to
-# compile its programs. Here, we will be going
+# compile its programs. Thus with the rule below, the directories in these
+# variables will be written into the final BuildProgram configuration file.
 astbuildprog.conf: $(top_srcdir)/bin/buildprog/astbuildprog.conf.in
 	cp $< $@
 	infoadded="no";                                \
@@ -78,6 +79,7 @@ astbuildprog.conf: $(top_srcdir)/bin/buildprog/astbuildprog.conf.in
 
 
 
-## The configuration file (distribute and install).
+## The configuration file (clean, distribute and install).
 ## NOTE: the man page is created in doc/Makefile.am
+CLEANFILES = astbuildprog.conf
 dist_sysconf_DATA = astbuildprog.conf
