General function to read arrays of any type
For tables, we have the general `gal_table_read' function which makes it
very easy to read the columns in the given file with any format. However,
until now we didn't have such a generic function for arrays. Such a
function will make it easy for all programs and library users to easily
read the input from all known types. This function has now been added to
the library.

During the process, `gal_fits_img_read' was also modified to not read the
WCS structure of the input FITS file. Because it would need two extra
arguments and the WCS is not always necessary, so there is no need to waste
time in such cases (reading and interpretting the WCS).

This was done as part of task #14885 (not yet complete).

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -56,10 +56,11 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
   arithmetic-bitxor.c arithmetic-divide.c arithmetic-eq.c arithmetic-ge.c  \
   arithmetic-gt.c arithmetic-le.c arithmetic-lt.c arithmetic-minus.c       \
   arithmetic-modulo.c arithmetic-multiply.c arithmetic-ne.c                \
-  arithmetic-or.c arithmetic-plus.c binary.c blank.c box.c checkset.c      \
-  convolve.c cosmology.c data.c fits.c git.c interpolate.c list.c match.c  \
-  options.c permutation.c polygon.c qsort.c dimension.c statistics.c       \
-  table.c tableintern.c threads.c tiff.c tile.c timing.c txt.c type.c wcs.c
+  arithmetic-or.c arithmetic-plus.c array.c binary.c blank.c box.c         \
+  checkset.c convolve.c cosmology.c data.c fits.c git.c interpolate.c      \
+  list.c match.c options.c permutation.c polygon.c qsort.c dimension.c     \
+  statistics.c table.c tableintern.c threads.c tiff.c tile.c timing.c      \
+  txt.c type.c wcs.c
 
 
 
@@ -69,15 +70,16 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
 # in the $(headersdir) directory. Some of the header files don't need to be
 # installed.
 headersdir=$(top_srcdir)/lib/gnuastro
-pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h         \
-  $(headersdir)/binary.h $(headersdir)/blank.h $(headersdir)/box.h        \
-  $(headersdir)/convolve.h $(headersdir)/cosmology.h $(headersdir)/data.h \
-  $(headersdir)/dimension.h $(headersdir)/fits.h $(headersdir)/git.h      \
-  $(headersdir)/interpolate.h $(headersdir)/list.h $(headersdir)/match.h  \
-  $(headersdir)/permutation.h $(headersdir)/polygon.h                     \
-  $(headersdir)/qsort.h $(headersdir)/statistics.h $(headersdir)/table.h  \
-  $(headersdir)/threads.h $(headersdir)/tiff.h $(headersdir)/tile.h       \
-  $(headersdir)/txt.h $(headersdir)/type.h $(headersdir)/wcs.h
+pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h          \
+  $(headersdir)/array.h $(headersdir)/binary.h $(headersdir)/blank.h       \
+  $(headersdir)/box.h $(headersdir)/convolve.h $(headersdir)/cosmology.h   \
+  $(headersdir)/data.h $(headersdir)/dimension.h $(headersdir)/fits.h      \
+  $(headersdir)/git.h $(headersdir)/interpolate.h $(headersdir)/list.h     \
+  $(headersdir)/match.h $(headersdir)/permutation.h                        \
+  $(headersdir)/polygon.h $(headersdir)/qsort.h $(headersdir)/statistics.h \
+  $(headersdir)/table.h $(headersdir)/threads.h $(headersdir)/tiff.h       \
+  $(headersdir)/tile.h $(headersdir)/txt.h $(headersdir)/type.h            \
+  $(headersdir)/wcs.h
 
 
 
