--- a/bin/convertt/Makefile.am
+++ b/bin/convertt/Makefile.am
@@ -30,9 +30,9 @@ bin_PROGRAMS = astconvertt
 
 astconvertt_LDADD = -lgnuastro
 
-astconvertt_SOURCES = main.c ui.c convertt.c eps.c jpeg.c
+astconvertt_SOURCES = main.c ui.c convertt.c eps.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h convertt.h eps.h jpeg.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h convertt.h eps.h
 
 
 
