Library is now in charge of writing EPS and PDF files
Until now, only the ConvertType program had the capabilities to write EPS
and PDF files. The respective functions are now brought out of ConvertType
and moved to the libraries to be accessible by all progarms and library
users.

Since the number of sections on the different (non-FITS) file formats in
the Gnuastro library chapter was getting too much, all the non-FITS formats
are now moved within a single section.

--- a/bin/convertt/Makefile.am
+++ b/bin/convertt/Makefile.am
@@ -30,9 +30,9 @@ bin_PROGRAMS = astconvertt
 
 astconvertt_LDADD = -lgnuastro
 
-astconvertt_SOURCES = main.c ui.c convertt.c eps.c
+astconvertt_SOURCES = main.c ui.c convertt.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h convertt.h eps.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h convertt.h
 
 
 
