--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -57,10 +57,10 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
   arithmetic-gt.c arithmetic-le.c arithmetic-lt.c arithmetic-minus.c       \
   arithmetic-modulo.c arithmetic-multiply.c arithmetic-ne.c                \
   arithmetic-or.c arithmetic-plus.c array.c binary.c blank.c box.c         \
-  checkset.c convolve.c cosmology.c data.c fits.c git.c interpolate.c      \
-  jpeg.c list.c match.c options.c permutation.c polygon.c qsort.c          \
-  dimension.c statistics.c table.c tableintern.c threads.c tiff.c tile.c   \
-  timing.c txt.c type.c wcs.c
+  checkset.c convolve.c cosmology.c data.c eps.c fits.c git.c              \
+  interpolate.c jpeg.c list.c match.c options.c pdf.c permutation.c        \
+  polygon.c qsort.c dimension.c statistics.c table.c tableintern.c         \
+  threads.c tiff.c tile.c timing.c txt.c type.c wcs.c
 
 
 
@@ -70,16 +70,16 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
 # in the $(headersdir) directory. Some of the header files don't need to be
 # installed.
 headersdir=$(top_srcdir)/lib/gnuastro
-pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h          \
-  $(headersdir)/array.h $(headersdir)/binary.h $(headersdir)/blank.h       \
-  $(headersdir)/box.h $(headersdir)/convolve.h $(headersdir)/cosmology.h   \
-  $(headersdir)/data.h $(headersdir)/dimension.h $(headersdir)/fits.h      \
-  $(headersdir)/git.h $(headersdir)/jpeg.h $(headersdir)/interpolate.h     \
-  $(headersdir)/list.h $(headersdir)/match.h $(headersdir)/permutation.h   \
-  $(headersdir)/polygon.h $(headersdir)/qsort.h $(headersdir)/statistics.h \
-  $(headersdir)/table.h $(headersdir)/threads.h $(headersdir)/tiff.h       \
-  $(headersdir)/tile.h $(headersdir)/txt.h $(headersdir)/type.h            \
-  $(headersdir)/wcs.h
+pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h         \
+  $(headersdir)/array.h $(headersdir)/binary.h $(headersdir)/blank.h      \
+  $(headersdir)/box.h $(headersdir)/convolve.h $(headersdir)/cosmology.h  \
+  $(headersdir)/data.h $(headersdir)/dimension.h $(headersdir)/eps.h      \
+  $(headersdir)/fits.h $(headersdir)/git.h $(headersdir)/jpeg.h           \
+  $(headersdir)/interpolate.h $(headersdir)/list.h $(headersdir)/match.h  \
+  $(headersdir)/pdf.h $(headersdir)/permutation.h $(headersdir)/polygon.h \
+  $(headersdir)/qsort.h $(headersdir)/statistics.h $(headersdir)/table.h  \
+  $(headersdir)/threads.h $(headersdir)/tiff.h $(headersdir)/tile.h       \
+  $(headersdir)/txt.h $(headersdir)/type.h $(headersdir)/wcs.h
 
 
 
