New Segment, NoiseChisel only detection, MakeCatalog re-write
Until now, NoiseChisel was in charge of both detection and
segmentation. This was making it extremely large and hard to manage, both
for the users (in terms of effectively understanding/using it) and the
developers (making it hard to add new features/options). Therefore
NoiseChisel's segmentation part has been spinned off into a new program
called Segment. It already has some good features (like giving an S/N of
true clumps to avoid having to find the S/N from the Sky regions)

As a result of this change in NoiseChisel and the new Segment program,
MakeCatalog (which uses the inputs of these programs) also underwent some
major changes in line with some several old tasks that were defined
before. In particular, it is now much more memory and CPU efficient: it
will only read the datasets that the output columns need and (when
necessary), it can read the Sky and Sky Standard deviation images from a
tiled image (with one pixel per tile).

This has been a very major commit and will hopefully open the way for many
more exciting features in NoiseChisel, Segment and MakeCatalog.

The General Program Usage Tutorial has not yet been corrected to
incorporate the new changes. It will be corrected shortly.

This completes tasks #13759, #14164, and #14869.

--- a/Makefile.am
+++ b/Makefile.am
@@ -83,6 +83,9 @@ endif
 if COND_NOISECHISEL
   MAYBE_NOISECHISEL = bin/noisechisel
 endif
+if COND_SEGMENT
+  MAYBE_SEGMENT = bin/segment
+endif
 if COND_STATISTICS
   MAYBE_STATISTICS = bin/statistics
 endif
@@ -110,12 +113,12 @@ endif
 ## conditions above). When `MAYBE_TEMPLATE' is not defined, then Make will
 ## see it as a blank string and igonore it, so there is no problem with
 ## having an uncommented `MAYBE_TEMPLATE' as a value in `SUBDIRS'.
-SUBDIRS = bootstrapped/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_ARITHMETIC)  \
-  $(MAYBE_BUILDPROG) $(MAYBE_CONVERTT) $(MAYBE_CONVOLVE)                 \
-  $(MAYBE_COSMICCAL) $(MAYBE_CROP) $(MAYBE_FITS) $(MAYBE_MATCH)          \
-  $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)                    \
-  $(MAYBE_NOISECHISEL) $(MAYBE_STATISTICS) $(MAYBE_TABLE)                \
-  $(MAYBE_TEMPLATE) $(MAYBE_WARP) doc tests
+SUBDIRS = bootstrapped/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_ARITHMETIC)    \
+  $(MAYBE_BUILDPROG) $(MAYBE_CONVERTT) $(MAYBE_CONVOLVE)                   \
+  $(MAYBE_COSMICCAL) $(MAYBE_CROP) $(MAYBE_FITS) $(MAYBE_MATCH)            \
+  $(MAYBE_MKCATALOG) $(MAYBE_MKNOISE) $(MAYBE_MKPROF) $(MAYBE_NOISECHISEL) \
+  $(MAYBE_SEGMENT) $(MAYBE_STATISTICS) $(MAYBE_TABLE) $(MAYBE_TEMPLATE)    \
+  $(MAYBE_WARP) doc tests
 
 
 
