--- a/bin/mkcatalog/astmkcatalog.conf
+++ b/bin/mkcatalog/astmkcatalog.conf
@@ -18,13 +18,12 @@
 # warranty.
 
 # Input:
- hdu                1
- objectshdu         2
- clumpshdu          3
+ hdu          OBJECTS
+ valueshdu          1
+ clumpshdu     CLUMPS
  skyhdu           SKY
  stdhdu       SKY_STD
  zeropoint        0.0
- skysubtracted      0
 
 # Output:
  sfmagnsigma        1
