--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -19,8 +19,8 @@
 
 # Input:
  khdu                 1
- wkhdu                1
- convolvedhdu         1
+ whdu                 1
+ chdu                 1
  minskyfrac         0.7
  minnumfalse        100
 
@@ -40,18 +40,10 @@
  openingngb           8
  sigmaclip        3,0.2
  dthresh            0.0
- detsnminarea        10
- detquant          0.95
+ snminarea           10
+ snquant           0.95
  detgrowquant      0.70
  detgrowmaxholesize 100
-
-# Segmentation
- segsnminarea        15
- keepmaxnearriver     0
- segquant          0.95
- gthresh            0.5
- minriverlength      15
- objbordersn          1
 
 # Operating mode
  continueaftercheck   0
