Correction touches to NoiseChisel, Segment and MakeCatalog
This commit started with correcting the General program usage tutorial for
the new NoiseChisel, Segment and MakeCatalog programs. However, as I made
progress, I noticed some issues in all three programs that needed to be
corrected/added. Here is a short summary of the major corrections/changes
for each program.

 - NoiseChisel: The default outout is now an 8-bit binary detection image
   (to be fed into Segment). So it has a new `--label' option to mark
   connected components.

 - NoiseChisel: The default `--detgrowquant' option was increased to
   `0.80'. `0.7' was good for the example mock image produced in `make
   check', but on real datasets, it may be too much.

 - MakeCatalog: By default the clumps catalog will also be sorted by object
   ID. The new `--noclumpsort' option can be used to avoid this sorting
   (after all, it takes some processing power).

 - MakeCatalog: No more complaints about clump-specific columns if `--ids'
   is used only for an objects catalog.

 - MakeCatalog and Segment: If a Sky or Sky STD file aren't given, it will
   look into the values file (if given), then the objects file (main input
   argument).

 - MakeCatalog and Segment: Like MakeCatalog, the Sky and its STD can also
   be given as values (not just datasets).

 - Segment: error can also be given as variance.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -53,12 +53,13 @@ if COND_HASGNULIBTOOL
 endif
 if COND_ARITHMETIC
   MAYBE_ARITHMETIC_TESTS = arithmetic/snimage.sh arithmetic/onlynumbers.sh \
-  arithmetic/where.sh arithmetic/or.sh
+  arithmetic/where.sh arithmetic/or.sh arithmetic/connected-components.sh
 
   arithmetic/onlynumbers.sh: prepconf.sh.log
+  arithmetic/connected-components.sh: noisechisel/noisechisel.sh.log
   arithmetic/snimage.sh: noisechisel/noisechisel.sh.log
   arithmetic/where.sh: noisechisel/noisechisel.sh.log
-  arithmetic/or.sh: noisechisel/noisechisel.sh.log
+  arithmetic/or.sh: segment/segment.sh.log
 endif
 if COND_BUILDPROG
   MAYBE_BUILDPROG_TESTS = buildprog/simpleio.sh
@@ -128,7 +129,7 @@ if COND_MKCATALOG
   mkcatalog/objects-clumps.sh mkcatalog/aperturephot.sh
 
   mkcatalog/objects-clumps.sh: segment/segment.sh.log
-  mkcatalog/detections.sh: noisechisel/noisechisel.sh.log
+  mkcatalog/detections.sh: arithmetic/connected-components.sh.log
   mkcatalog/aperturephot.sh: noisechisel/noisechisel.sh.log          \
                              mkprof/clearcanvas.sh.log
 endif
