--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -59,8 +59,9 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
   arithmetic-or.c arithmetic-plus.c array.c binary.c blank.c box.c         \
   checkset.c convolve.c cosmology.c data.c eps.c fits.c git.c              \
   interpolate.c jpeg.c label.c list.c match.c options.c pdf.c              \
-  permutation.c polygon.c qsort.c dimension.c statistics.c table.c         \
-  tableintern.c threads.c tiff.c tile.c timing.c txt.c type.c wcs.c
+  permutation.c pointer.c polygon.c qsort.c dimension.c statistics.c       \
+  table.c tableintern.c threads.c tiff.c tile.c timing.c txt.c type.c      \
+  wcs.c
 
 
 
@@ -77,10 +78,10 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h          \
   $(headersdir)/fits.h $(headersdir)/git.h $(headersdir)/interpolate.h     \
   $(headersdir)/jpeg.h $(headersdir)/label.h $(headersdir)/list.h          \
   $(headersdir)/match.h $(headersdir)/pdf.h $(headersdir)/permutation.h    \
-  $(headersdir)/polygon.h $(headersdir)/qsort.h $(headersdir)/statistics.h \
-  $(headersdir)/table.h $(headersdir)/threads.h $(headersdir)/tiff.h       \
-  $(headersdir)/tile.h $(headersdir)/txt.h $(headersdir)/type.h            \
-  $(headersdir)/wcs.h
+  $(headersdir)/pointer.h $(headersdir)/polygon.h $(headersdir)/qsort.h    \
+  $(headersdir)/statistics.h $(headersdir)/table.h $(headersdir)/threads.h \
+  $(headersdir)/tiff.h $(headersdir)/tile.h $(headersdir)/txt.h            \
+  $(headersdir)/type.h $(headersdir)/wcs.h
 
 
 
