--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -106,8 +106,8 @@ EXTRA_DIST = gnuastro.pc.in $(headersdir)/README $(internaldir)/README  \
   $(internaldir)/arithmetic-or.h $(internaldir)/arithmetic-plus.h       \
   $(internaldir)/checkset.h $(internaldir)/commonopts.h                 \
   $(internaldir)/config.h.in $(internaldir)/fixedstringmacros.h         \
-  $(internaldir)/kernel-2d.h $(internaldir)/options.h                   \
-  $(internaldir)/tableintern.h $(internaldir)/timing.h
+  $(internaldir)/options.h $(internaldir)/tableintern.h                 \
+  $(internaldir)/timing.h
 
 
 
