Added Segment's kernel-2d.h to its Makefile.am
After using a separate `kernel-2d.h' for Segment and NoiseChisel, I had
forgot to update the `Makefile.am'. This is now corrected.

This problem was found by David Valls-Gabaud.

--- a/bin/segment/Makefile.am
+++ b/bin/segment/Makefile.am
@@ -32,7 +32,7 @@ astsegment_LDADD = -lgnuastro
 
 astsegment_SOURCES = main.c ui.c segment.c clumps.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h segment.h clumps.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h segment.h clumps.h kernel-2d.h
 
 
 
