Text of GNU General Public License added in the book
The text of the GNU General Public License has been added to the book for
completeness. It is imported from Gnulib.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -47,8 +47,8 @@ TEXI2DVI = texi2dvi -I $(bootstrpdoc) -I $(srcdir)
 
 ## Commands to make the texinfo tools.
 info_TEXINFOS = gnuastro.texi
-gnuastro_TEXINFOS = $(bootstrpdoc)/fdl.texi formath.texi	\
-                    $(srcdir)/authors.texi
+gnuastro_TEXINFOS = $(bootstrpdoc)/fdl.texi $(bootstrpdoc)/gpl-3.0.texi \
+                    $(srcdir)/authors.texi formath.texi
 
 
 ## Files not predefined by Automake, and not in dependencies that must
