Programs link directly with Gnulib
Until now only Gnuastro's library would link with Gnulib. All the programs
would then access Gnulib through Gnuastro's library. This was fine on
GNU/Linux linkers. But as reported over one year ago by Alan Lefor (in bug
Mac OS systems (just found out now, thanks to Leindert Boogaard).

With this commit, each program will first link with Gnulib, then with
Gnuastro's library and initial tests with Leindert showed that it solved
the problem.

This bug was found and solved thanks to Alan Lefor and Leindert Boogaard.

This fixes bug #50957.

--- a/bin/TEMPLATE/Makefile.am
+++ b/bin/TEMPLATE/Makefile.am
@@ -28,7 +28,12 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib -I\$(top_srcdir)/lib
 ## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astTEMPLATE
 
-astTEMPLATE_LDADD = -lgnuastro
+## We are linking with `libgnu' first eventhough `libgnu' is already linked
+## to `libgnuastro'. The reason is that some linkers (Mac OS for example),
+## don't keep external variables (needed in Argp) after the first link. So
+## the `libgnu' (that is indirectly linked through `libgnuastro') can't see
+## those variables. We thus need to explicitly link with `libgnu' first.
+astTEMPLATE_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro
 
 astTEMPLATE_SOURCES = main.c ui.c TEMPLATE.c
 
