--- a/bin/buildprog/Makefile.am
+++ b/bin/buildprog/Makefile.am
@@ -34,7 +34,8 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib -I\$(top_srcdir)/lib \
 ## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = astbuildprog
 
-astbuildprog_LDADD = -lgnuastro
+## Reason for linking with `libgnu' described in `bin/TEMPLATE/Makefile.am'.
+astbuildprog_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro
 
 astbuildprog_SOURCES = main.c ui.c buildprog.c astbuildprog.conf
 
