--- a/bin/table/Makefile.am
+++ b/bin/table/Makefile.am
@@ -28,7 +28,8 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib -I\$(top_srcdir)/lib
 ## Program definition (name, linking, sources and headers)
 bin_PROGRAMS = asttable
 
-asttable_LDADD = -lgnuastro
+## Reason for linking with `libgnu' described in `bin/TEMPLATE/Makefile.am'.
+asttable_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro
 
 asttable_SOURCES = main.c ui.c table.c
 
